--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^19.0.0",
     "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
+    "react-fast-marquee": "^1.6.5",
     "react-icon": "^1.0.0",
     "react-icons": "^5.5.0"
   },
